Apply software craft principles: refactoring and thorough cleanup
- Remove redundant allCandidatesInitialized boolean flag (use null check instead)
- Simplify shouldSkipEntry in both CoreInjectors to single boolean expression
- Eliminate intermediate LinkedHashMap in mergeSpringFactories (iterate coreProps directly)
- Extract parseLines helper in both CoreInjectors to eliminate internal duplication
- Replace Collectors.toList() with .toList() (Java 16+) throughout
- Simplify buildClasspath to use String.join instead of stream collect
- Remove empty no-op constructors with redundant Javadoc from Gradle plugin classes
- Remove unused imports (Collectors, LinkedHashMap, Map) after refactoring
- Align Gradle plugin Java files to tab-based indentation (spring-javaformat style)
- Apply spring-javaformat to all Maven modules

Co-authored-by: patbaumgartner <406780+patbaumgartner@users.noreply.github.com>
Agent-Logs-Url: https://github.com/patbaumgartner/spring-boot-autoconfiguration-optimizer/sessions/be3c94ef-967e-4d62-a101-8a69a8c75ffd